@@ -14,64 +14,94 @@ import javafx.stage.Stage;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.EnumMap;
+import java.util.Map;
 import java.util.concurrent.LinkedBlockingQueue;
 
 
 public class FXApplication extends Application {
 
+    public enum SceneType {
+        MENU("/fxml/Menu.fxml"),
+        NICKNAME("/fxml/InsertNickname.fxml"),
+        ID_GAME("/fxml/InsertIDgame.fxml"),
+        NUM_PLAYERS("/fxml/InsertNumPlayers.fxml"),
+        GENERIC_WAITING_ROOM("/fxml/GenericWaitingRoom.fxml"),
+        RUNNING("/fxml/Running.fxml"),
+        GAME_OVER("/fxml/GameOver.fxml"),
+        ERROR("/fxml/Error.fxml");
+
+        private final String fxmlPath;
+
+        SceneType(String fxmlPath) {
+            this.fxmlPath = fxmlPath;
+        }
+
+        public String getFxmlPath() {
+            return fxmlPath;
+        }
+    }
+
     private Stage mainStage;
-    private ArrayList<SceneClass> sceneCollection;
+    private Map<SceneType, Scene> sceneMap;
+    private Map<SceneType, GuiInputReaderController> controllerMap;
     private double previousWidth, previousHeight;
     private boolean isResized = true;
     private final Scale scaleTransform = new Scale(1, 1);
     private final ChangeListener<Number> resizeListener = this::resizeListener;
 
-
     @Override
     public void start(Stage mainStage) {
-        new GameDynamic(this, TypeConnection.valueOf(getParameters().getUnnamed().getFirst()));
+        new GameDynamic(this, TypeConnection.valueOf(getParameters().getUnnamed().get(0)));
         this.mainStage = mainStage;
+        this.sceneMap = new EnumMap<>(SceneType.class);
+        this.controllerMap = new EnumMap<>(SceneType.class);
         initializeScenes();
     }
 
     private void initializeScenes() {
-        sceneCollection = new ArrayList<>();
-        for (SceneClass.SceneType sceneType : SceneClass.SceneType.values()) {
-            String fxmlPath = sceneType.getFxmlPath();
-            if (fxmlPath == null || fxmlPath.isEmpty()) {
-                System.err.println("FXML path not valid for: " + sceneType.name());
-                continue;
-            }
+        for (SceneType type : SceneType.values()) {
             try {
-                FXMLLoader fxmlLoader = new FXMLLoader(getClass().getResource(fxmlPath));
-                Parent sceneRoot = fxmlLoader.load();
-                GuiInputReaderController sceneController = fxmlLoader.getController();
-                Scene scene = new Scene(sceneRoot);
-                sceneRoot.getTransforms().add(scaleTransform);
-                sceneCollection.add(new SceneClass(scene, sceneType, sceneController));
+                createAndStoreScene(type);
             } catch (IOException e) {
-                throw new RuntimeException("Error occurred while loading " + fxmlPath, e);
+                System.err.println("Failed to load scene for type: " + type + ", error: " + e.getMessage());
             }
         }
     }
 
-    public void setCurrentScene(SceneClass.SceneType sceneType) {
+    private void createAndStoreScene(SceneType type) throws IOException {
+        String fxmlPath = type.getFxmlPath();
+        if (fxmlPath == null || fxmlPath.isEmpty()) {
+            System.err.println("Invalid FXML path for: " + type);
+            return;
+        }
+
+        FXMLLoader loader = new FXMLLoader(getClass().getResource(fxmlPath));
+        Parent root = loader.load();
+        GuiInputReaderController controller = loader.getController();
+        Scene scene = new Scene(root);
+        root.getTransforms().add(scaleTransform);
+
+        sceneMap.put(type, scene);
+        controllerMap.put(type, controller);
+    }
+
+    public void changeScene(SceneType sceneType) {
         isResized = false;
-        int index = getSceneIndex(sceneType);
-        if (index != -1) {
-            SceneClass sceneInfo = sceneCollection.get(index);
-            Scene currentScene = sceneInfo.getCurrentScene();
+        Scene newScene = sceneMap.get(sceneType);
+        if (newScene != null) {
+            newScene.getRoot().getTransforms().add(scaleTransform);
 
-            currentScene.getRoot().getTransforms().add(scaleTransform);
-
-            this.mainStage.setScene(currentScene);
-            this.mainStage.show();
+            mainStage.setScene(newScene);
+            mainStage.show();
 
             updatePreviousDimensions();
             removeResizeListeners();
             addResizeListeners();
 
             isResized = true;
+        } else {
+            System.err.println("Scene not found for type: " + sceneType);
         }
     }
 
@@ -96,33 +126,23 @@ public class FXApplication extends Application {
 
     public void resize(double width, double height) {
         if (isResized) {
-            double scaleX = width / previousWidth;
-            double scaleY = height / previousHeight;
             previousWidth = width;
             previousHeight = height;
-            scaleTransform.setX(scaleX);
-            scaleTransform.setY(scaleY);
+            scaleTransform.setX(width / previousWidth);
+            scaleTransform.setY(height / previousHeight);
         }
-    }
-
-    private int getSceneIndex(SceneClass.SceneType sceneType) {
-        for (int i = 0; i < sceneCollection.size(); i++) {
-            if (sceneCollection.get(i).getSceneType() == sceneType) {
-                return i;
-            }
-        }
-        return -1;
     }
 
     public void setGUIReaderToScenes(LinkedBlockingQueue<String> guiReader) {
-        for (SceneClass scene : sceneCollection) {
-            scene.setInputReaderGUI(guiReader);
+        for (GuiInputReaderController controller : controllerMap.values()) {
+            if (controller != null) {
+                controller.setInputReaderGUI(guiReader);
+            }
         }
     }
 
-    public GuiInputReaderController getSceneController(SceneClass.SceneType sceneType) {
-        int index = getSceneIndex(sceneType);
-        return index != -1 ? sceneCollection.get(index).getSceneController() : null;
+    public GuiInputReaderController getSceneController(SceneType type) {
+        return controllerMap.get(type);
     }
 
 }
